--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="colorgame.css">
 </head>
 <body>
-<h1>Pick this <span id="colorDisplay">RGB</span> color</h1>
-
+<h1>Pick this<br> <span id="colorDisplay">RGB</span><br>color</h1>
 <div id="stripe">
 	<button id="reset">New Colors</button>
 	<span id="message"></span>
